2024-09-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list): Remove ia64.

2024-09-10  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el (ebuild-mode-test-update-copyright):
	Actually run ebuild-mode-update-copyright.

2024-08-29  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.75 released.

	* test/ebuild-mode-tests.el (ebuild-mode-test-run-with-fixed-time):
	* test/glep-mode-tests.el (glep-mode-test-run-with-fixed-time):
	Use encode-time instead of date-to-time. Bug 938666.

2024-08-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.74 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2024-08-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-eapi-list): Drop 6 from list of
	supported EAPIs.

	* test/ebuild-mode-tests.el (ebuild-mode-test-input): New variable
	and function.
	(ebuild-mode-test-skeleton, ebuild-mode-test-keybindings):
	New tests.
	* test/glep-mode-tests.el (glep-mode-test-input): New variable and
	function.
	(glep-mode-test-skeleton, glep-mode-test-keybindings): New tests.
	* test/gentoo-newsitem-mode-tests.el:
	* test/devbook-mode-tests.el: New files.
	* Makefile (DISTFILES, TESTS): Add them.

	* test/xemacs-test-wrapper.el (kill-emacs): Return a useful exit
	status.

2024-08-22  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el (cl-letf, cl-letf*)
	(ebuild-mode-test-run-with-fixed-time)
	(ebuild-mode-test-run-silently, ebuild-mode-test-font-lock)
	(ebuild-mode-test-unescape-string): Portability fixes for XEmacs.
	* test/glep-mode-tests.el (glep-mode-test-run-with-fixed-time):
	Sync from ebuild-mode-test-run-with-fixed-time.
	* test/xemacs-test-wrapper.el: New file.
	* Makefile (DISTFILES): Add xemacs-test-wrapper.el.
	(ELCS, TESTS): Include only files that are actually supported by
	the Emacs version.
	(check): Make it work with XEmacs.

	* ebuild-mode.el (ebuild-repo-mode): Activate the menu in XEmacs.
	Use positive condition for feature.
